Migration of the documentation to Sphinx. Probably still needs a bit of tweaking (in particular w.r.t theme/styles) but the main part should be finished.

--- a/nmag/example_larmor/makefile
+++ b/nmag/example_larmor/makefile
@@ -20,13 +20,13 @@ plot:
 clean:
 	rm larmor_dat* 
 
-pngformulae:
-	../latex-png torque.png "{\\mathbf T} = \\mu_0 {\\mathbf m} \\times {\\mathbf H}_{\rm ext}"
-	python ../tools/scalepng torque.png 3.5
-	../latex-png frequency.png "f_{\\rm Larmor}=\\frac{\\gamma}{2\\pi}\\cdot\\mu_0\left|{\\mathbf H}_{\rm ext}\right|"
-	python ../tools/scalepng frequency.png 4.5
-	../latex-png gamma.png "\\gamma=\\frac{g\\cdot e}{2m_e}\\approx 1.7588\\times10^{11}\,{\rm T}^{-1}{\rm s}^{-1}"
-	python ../tools/scalepng gamma.png 7
+#pngformulae:
+#	../latex-png torque.png "{\\mathbf T} = \\mu_0 {\\mathbf m} \\times {\\mathbf H}_{\rm ext}"
+#	python ../tools/scalepng torque.png 3.5
+#	../latex-png frequency.png "f_{\\rm Larmor}=\\frac{\\gamma}{2\\pi}\\cdot\\mu_0\left|{\\mathbf H}_{\rm ext}\right|"
+#	python ../tools/scalepng frequency.png 4.5
+#	../latex-png gamma.png "\\gamma=\\frac{g\\cdot e}{2m_e}\\approx 1.7588\\times10^{11}\,{\rm T}^{-1}{\rm s}^{-1}"
+#	python ../tools/scalepng gamma.png 7
 
 _rst:
 	echo "Only for testing: -> example_larmor.html"
