--- a/nmag/tutorial/makefile
+++ b/nmag/tutorial/makefile
@@ -1,10 +1,10 @@
-pngformulae:
-	../latex-png l_ex_soft.png "{l_\\mathrm{1} = \sqrt{\frac{2A}{\\mu_0 M^2_\\mathrm{s}}}}"
-	python ../tools/scalepng l_ex_soft.png 2.5
-
-	../latex-png l_ex_hard.png "{l_\\mathrm{2} = \sqrt{\frac{A}{K_1}}}"
-	python ../tools/scalepng l_ex_hard.png 2.5
-
+#pngformulae:
+#	../latex-png l_ex_soft.png "{l_\\mathrm{1} = \sqrt{\frac{2A}{\\mu_0 M^2_\\mathrm{s}}}}"
+#	python ../tools/scalepng l_ex_soft.png 2.5
+#
+#	../latex-png l_ex_hard.png "{l_\\mathrm{2} = \sqrt{\frac{A}{K_1}}}"
+#	python ../tools/scalepng l_ex_hard.png 2.5
+#
 scalepngs:
 	python ../tools/scalepng fd.png 5
 	python ../tools/scalepng fe.png 5
