fixing makefile and updating plot.gnp to match script that is included in manual

--- a/nmag/example_nmagprobe/makefile
+++ b/nmag/example_nmagprobe/makefile
@@ -1,10 +1,12 @@
-NSIMROOT=../../../..
+NSIMROOT=../../../src
 
 CUBICMESH_DIR=$(NSIMROOT)/utils/cubicmesh
 CUBICMESH=$(CUBICMESH_DIR)/cubicmesh
 EXAMESH=$(CUBICMESH_DIR)/examesh
 NMESHPP=$(NSIMROOT)/bin/nmeshpp
 NMAGPP=$(NSIMROOT)/bin/nmagpp
+NMAGPROBE=$(NSIMROOT)/bin/nmagprobe
+NMESHIMPORT=$(NSIMROOT)/bin/nmeshimport
 NSIM=$(NSIMROOT)/bin/nsim
 NCOL=$(NSIMROOT)/bin/ncol
 LATEXPNG=python ../latex-png.py
@@ -12,34 +14,33 @@ BORDER=20
 
 .PHONY: all clean vtk run
 
-all:
+all: remesh relax
 
-pyfilm.nmesh.h5: $(EXAMESH)
-	$(EXAMESH) "pyfilm.nmesh,100:30,100:35,10:3"
-	$(NMESHPP) -c pyfilm.nmesh $@
-	rm -f pyfilm.nmesh
+
+netgen:
+	netgen -geofile=cylinder.geo -meshfiletype="Neutral Format" -meshfile=cylinder.neutral -batchmode
+
+meshconvert:
+	$(NMESHIMPORT) --netgen cylinder.neutral cylinder.nmesh.h5
+	rm cylinder.neutral
+
 
 remesh: netgen meshconvert
 
-vortex_m.h5:
+relax:
 	$(NSIM) relaxation.py --clean
 
-run: vortex_m.h5
-	$(NSIM) stt.py --clean
+dynamics:
+	$(NSIM) dynamics.py --clean
 
-vtk: vortex_m.h5
-	rm -f m-*.vtk
-	$(NMAGPP) relaxation --vtk=m.vtk
+nmagprobe:
+	$(NMAGPROBE) --verbose dynamics_dat.h5 --field=m_Py \
+	  --time=0,100e-12,101 --space=-50,50,201/0/0 --ref-time=0.0 \
+	  --scalar-mode=component,1 --out=real-space.dat \
+	  --ft-axes=0,1 --ft-out=norm --ft-out=rec-space.dat
 
-m_of_t.dat: stt_dat.ndt
-	$(NCOL) stt time M_Py_0 M_Py_1 M_Py_2 > $@
-
-m_of_t.eps: m_of_t.gnp m_of_t.dat
-	gnuplot m_of_t.gnp
-
-m_of_t.png: m_of_t.eps
-	convert -trim -antialias -density 150 m_of_t.eps m_of_t.png
-	python ../tools/scalepng m_of_t.png 15
+pngs:
+	gnuplot plot.gnp
 
 recreal-space:
 	gnuplot plot.gnp
@@ -49,6 +50,3 @@ recreal-space:
 clean:
 	rm -f *_dat* *_log* *.log *.conf *_progress.txt vortex_m.h5
 
-pdf:
-	rst2latex --strict --stylesheet=stylesheet.tex -v doc.txt doc.tex
-	pdflatex doc.tex; 
