Added new script to plot domain wall profile. Still looks correct (after running the Nmag simulation again).
(Gnuplot script seems broken, and was easier for me to write a new one.)

--- a/nmag/example_uniaxial_anis/Makefile
+++ b/nmag/example_uniaxial_anis/Makefile
@@ -4,8 +4,9 @@ simulate:
 	../../../src/bin/nsim bar.py --clean
 
 media:
-	gnuplot bar_mag_x.gnu
+	#gnuplot bar_mag_x.gnu
+	#gnuplot bar_mag_x_compared.gnu
+	python make_plots.py
 	python ../tools/scalepng bar_mag_x.png 15
-	gnuplot bar_mag_x_compared.gnu
 	python ../tools/scalepng bar_mag_x_compared.png 15
 
